--- a/css/resume.css
+++ b/css/resume.css
@@ -262,6 +262,7 @@ body {
   text-decoration: none;
   color: #357ebd;
   display: block;
+  text-transform: capitalize;
 }
 .floating-nav ul li a:hover {
   color: #1f496e;
